# flutter_ffi_uvc

./: .gitattributes  .gitignore  .metadata  .pubignore  AGENTS.md  ALL_AGENTS_RULE.md  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  ROADMAP.md  THIRD_PARTY_NOTICES.md  ffigen.yaml  pubspec.yaml
.claude/skills/gh-release/: SKILL.md
android/: .gitignore  build.gradle  settings.gradle
android/src/main/: AndroidManifest.xml
android/src/main/kotlin/com/cornpip/flutter_ffi_uvc/: FlutterFfiUvcPlugin.kt
doc/: changelog-style.md  windows-backend.md
example/: README.md  pubspec.yaml
example/android/app/: build.gradle.kts
example/android/app/src/main/: AndroidManifest.xml
example/android/app/src/main/kotlin/com/cornpip/flutter_ffi_uvc_example/: MainActivity.kt
example/integration_test/: streaming_error_test.dart
example/lib/: android_bridge.dart  app_theme.dart  main.dart
example/lib/usb/: android_usb_bridge.dart  android_usb_device_entry.dart
example/lib/widgets/: controls_panel.dart  stream_stats_card.dart
example/native_test/: run_native_tests.dart  transform_test.dart
example/windows/: CMakeLists.txt
example/windows/flutter/: CMakeLists.txt  generated_plugin_registrant.cc  generated_plugins.cmake
example/windows/runner/: Runner.rc  main.cpp  utils.cpp  win32_window.cpp  win32_window.h
lib/: flutter_ffi_uvc.dart
lib/src/: flutter_ffi_uvc_bindings_generated.dart  flutter_ffi_uvc_impl.dart  uvc_camera_api.dart
src/: CMakeLists.txt  flutter_ffi_uvc.c  flutter_ffi_uvc.h
src/backend_libuvc/: flutter_ffi_uvc.c
src/backend_libuvc/libuvc/cmake/: FindJpegPkg.cmake
src/backend_libuvc/libuvc/include/libuvc/: uvc_log.h
src/backend_libuvc/libuvc/src/: ctrl-gen.c  ctrl.c  stream.c
src/include/: flutter_ffi_uvc.h
src/libuvc/src/: device.c  init.c  stream.c
test/: platform_guard_test.dart  public_api_models_test.dart  streaming_error_test.dart  uvc_control_id_test.dart
windows/: CMakeLists.txt  flutter_ffi_uvc_plugin.cpp  flutter_ffi_uvc_plugin.h  flutter_ffi_uvc_plugin_c_api.cpp  uvc_mf_backend.cpp  uvc_mf_backend.h
windows/include/flutter_ffi_uvc/: flutter_ffi_uvc_plugin_c_api.h
